--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,19 @@
 # If you are not using git, you can delete this file. For more information see: https://git-scm.com/docs/gitignore
 # For useful gitignore templates see: https://github.com/github/gitignore
 
+# Salesforce cache
+.sfdx/
+.localdevserver/
+
+# LWC VSCode autocomplete
+**/lwc/jsconfig.json
+
+# LWC Jest coverage reports
+coverage/
+
+# SOQL Query Results
+**/scripts/soql/query-results
+
 # Logs
 logs
 *.log
