--- a/package.json
+++ b/package.json
@@ -2,12 +2,44 @@
   "name": "ffhttp-googledrive-export-files-support",
   "version": "1.0.0",
   "description": "Adds export functionality to ffhttp library",
-  "main": "index.js",
   "repository": "https://github.com/miguelriverarios/ffhttp-googledrive",
   "author": "Miguel Rivera Rios <miguel.e.rivera.rios@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "lint": "npm run lint:lwc && npm run lint:aura",
+    "lint:aura": "eslint **/aura/**",
+    "lint:lwc": "eslint **/lwc/**",
+    "test": "npm run test:unit",
+    "test:unit": "sfdx-lwc-jest",
+    "test:unit:watch": "sfdx-lwc-jest --watch",
+    "test:unit:debug": "sfdx-lwc-jest --debug",
+    "test:unit:coverage": "sfdx-lwc-jest --coverage",
+    "prettier": "prettier --write \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
+    "prettier:verify": "prettier --list-different \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\""
+  },
   "devDependencies": {
-    "prettier": "^2.2.1",
-    "prettier-plugin-apex": "^1.8.0"
+    "@prettier/plugin-xml": "^0.12.0",
+    "@salesforce/eslint-config-lwc": "^0.7.0",
+    "@salesforce/eslint-plugin-aura": "^1.4.0",
+    "@salesforce/sfdx-lwc-jest": "^0.9.2",
+    "eslint": "^7.6.0",
+    "eslint-config-prettier": "^6.11.0",
+    "husky": "^4.2.1",
+    "lint-staged": "^10.0.7",
+    "prettier": "^2.0.5",
+    "prettier-plugin-apex": "^1.6.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}": [
+      "prettier --write"
+    ],
+    "**/{aura|lwc}/**": [
+      "eslint"
+    ]
   }
 }
